<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/Titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/cmp7"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/recomendacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:text="@string/cmp8"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/documento"
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:ems="10"
                android:textColor="@color/black"
                android:hint="@string/cmp1"
                android:inputType="text" />

            <EditText
                android:id="@+id/nombres"
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:textColor="@color/black"
                android:hint="@string/cmp2"
                android:inputType="text"/>

            <EditText
                android:id="@+id/direccion"
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:textColor="@color/black"
                android:hint="@string/cmp5"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edad"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/cmp3"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/cmp4"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/materia1"
                    android:layout_width="202dp"
                    android:layout_height="44dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/black"
                    android:entries="@array/materias" />

                <EditText
                    android:id="@+id/nota1"
                    android:layout_width="132dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:foregroundTint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/cmp6"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/materia2"
                    android:layout_width="202dp"
                    android:layout_height="44dp"
                    android:textColor="@color/black"
                    android:entries="@array/materias"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/nota2"
                    android:layout_width="132dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/cmp6"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/materia3"
                    android:layout_width="202dp"
                    android:layout_height="44dp"
                    android:textColor="@color/black"
                    android:entries="@array/materias"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/nota3"
                    android:layout_width="132dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:hint="@string/cmp6"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/materia4"
                    android:layout_width="202dp"
                    android:layout_height="44dp"
                    android:textColor="@color/black"
                    android:entries="@array/materias"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/nota4"
                    android:layout_width="132dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:hint="@string/cmp6"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/materia5"
                    android:layout_width="202dp"
                    android:layout_height="44dp"
                    android:entries="@array/materias"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/nota5"
                    android:layout_width="132dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:hint="@string/cmp6"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCalcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn1" />

                <Button
                    android:id="@+id/btnVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/regresar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>